--- a/src/main/resources/templates/topics/add.html
+++ b/src/main/resources/templates/topics/add.html
@@ -32,6 +32,11 @@
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
                 <button type="submit" class="btn btn-primary"><i class="fa fa-plus"></i>作成する</button>
+                <hr />
+                <dl class="small text-info notes">
+                  <dt><i class="fa fa-check"></i></dt>
+                  <dd>あとからトピックの内容変更や削除をする場合は、現在お使いの端末・ブラウザからのみ可能です。</dd>
+                </dl>
               </div>
             </div>
           </div>
