[#17] 選択肢の登録は20件までに制限

--- a/src/main/resources/templates/topics/add.html
+++ b/src/main/resources/templates/topics/add.html
@@ -18,7 +18,7 @@
             <div class="form-group" th:classappend="${#fields.hasErrors('choiceText')} ? 'has-error'">
               <label for="choiceText" class="col-md-2 control-label">
                 選択肢
-                <small class="text-warning notes">必須・1000文字まで</small>
+                <small class="text-warning notes">必須・1000文字・20個まで</small>
               </label>
               <div class="col-md-10">
                 <textarea name="choiceText"
