--- a/src/main/resources/templates/topics/edit.html
+++ b/src/main/resources/templates/topics/edit.html
@@ -17,6 +17,7 @@
             <div class="form-group" th:classappend="${#fields.hasErrors('choiceText')} ? 'has-error'">
               <label for="choiceText" class="col-md-2 control-label">
                 選択肢
+                <small class="text-warning notes">必須・20個まで</small>
               </label>
               <div class="col-md-10">
                 <h5 class="text-info"><i class="fa fa-check"></i>チェックして削除</h5>
