[#5] GAタグを設定

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://ultraq.net.nz/web/thymeleaf/layout">
   <head>
@@ -43,5 +43,6 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap/min.js"
             th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
     <script th:src="@{/application.js}"></script>
+    <script th:replace="_ga-tag :: ga-tag"></script>
   </body>
 </html>
